--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "openai": "^4.52.0",
     "preline": "^2.3.0",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.30.1",
